--- a/www/index.html
+++ b/www/index.html
@@ -323,15 +323,6 @@
 									</a>
 								</li>
 								<li>
-									<a class="item-link item-content btn-ldb-mro" data-game="mario">
-										<div class="item-inner">
-											<div class="item-title-row">
-												<div class="item-title">Mario</div>
-											</div>
-										</div>
-									</a>
-								</li>
-								<li>
 									<a class="item-link item-content btn-ldb-pcm" data-game="pacman">
 										<div class="item-inner">
 											<div class="item-title-row">
@@ -523,7 +514,13 @@
 								<button class="col button button-fill button-raised btn-rdm translate" data-en="Redeem Cash" data-bm="Menebus Tunai" data-cn="兑换现金" data-tm="பணத்தை மீட்டுக்கொள்ளுங்கள்">Redeem Cash</button>
 							</p>
 						</div>
-						<div id="wooho-coin" class="fab fab-extended fab-right-top color-gray" style="margin: 15px 15px 0 0;">
+						<div id="wooho-coin" class="fab fab-extended fab-right-top color-gray" style="margin: 15px 5px 0 0;">
+							<a href="#">
+								<i class="icon material-icons md-only">stars</i>
+								<div class="fab-text">0</div>
+							</a>
+						</div>
+						<div id="wooho-cash" class="fab fab-extended fab-left-top color-gray" style="margin: 15px 0 0 5px;">
 							<a href="#">
 								<i class="icon material-icons md-only">monetization_on</i>
 								<div class="fab-text">0</div>
