--- a/www/index.html
+++ b/www/index.html
@@ -500,7 +500,7 @@
 								<button class="col button button-fill button-raised btn-ldb translate" data-en="Leaderboard" data-bm="Senarai Juara" data-cn="排行榜" data-tm="சாம்பியன் பட்டியல்">Leaderboard</button>
 							</p>
 							<p class="row">
-								<button class="col button button-fill button-raised btn-ecn translate" data-en="Earn Coin" data-bm="Dapatkan Coin" data-cn="赚 coin" data-tm="Coin சம்பாதி">Earn Coin</button>
+								<button class="col button button-fill button-raised btn-ecn translate" data-en="Earn Star" data-bm="Dapatkan Star" data-cn="赚 Star" data-tm="Star சம்பாதி">Earn Star</button>
 							</p>
 							<p class="row">
 								<button class="col button button-fill button-raised btn-stg translate" data-en="Settings" data-bm="Konfigurasi" data-cn="设定" data-tm="அமைப்புகள்">Settings</button>
@@ -523,7 +523,7 @@
 						<div id="wooho-cash" class="fab fab-extended fab-left-top color-gray" style="margin: 15px 0 0 5px;">
 							<a href="#">
 								<i class="icon material-icons md-only">monetization_on</i>
-								<div class="fab-text">0</div>
+								<div class="fab-text">0.00</div>
 							</a>
 						</div>
 					</div>
