--- a/www/games/tetris/index.html
+++ b/www/games/tetris/index.html
@@ -16,6 +16,7 @@
 	</script>
 </head>
 <body>
+	<div id="woohoSound" style="display:none;height:0;width:0;"></div>
 	<script src="./js/jquery.min.js"></script>
   <script src="./js/sound-manager.js"></script>
   <script src="./js/constants.js"></script>
