--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
 					<a href="#scoreDay" class="tab-link tab-link-active translate" data-en="Day" data-bm="Hari" data-cn="天" data-tm="நாள்">Day</a>
 					<a href="#scoreWeek" class="tab-link translate" data-en="Week" data-bm="Minggu" data-cn="周" data-tm="வாரம்">Week</a>
 					<a href="#scoreMonth" class="tab-link translate" data-en="Month" data-bm="Bulan" data-cn="月" data-tm="மாதம்">Month</a>
+					<a href="#scorePNW" class="tab-link">P &amp; W</a>
 				</div>
 			</div>
 			<div class="tabs">
@@ -41,6 +42,7 @@
 					<div id="scoreDay" class="page-content tab tab-active"></div>
 					<div id="scoreWeek" class="page-content tab"></div>
 					<div id="scoreMonth" class="page-content tab"></div>
+					<div id="scorePNW" class="page-content tab"></div>
 				</div>
 			</div>
 		</div>
@@ -138,6 +140,31 @@
 				</div>
 			</div>
 		</div>
+		<div id="gamePNW" class="login-screen">
+			<div class="view">
+				<div class="navbar">
+					<div class="navbar-bg"></div>
+					<div class="navbar-inner sliding">
+						<div class="left">
+							<a class="link back">
+								<i class="icon icon-back"></i>
+								<span class="if-not-md"></span>
+							</a>
+						</div>
+						<div class="title"></div>
+						<div class="right">
+							<a class="link replay">
+								<i class="icon material-icons md-only">replay</i>
+								<span class="if-not-md"></span>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="page">
+					<div class="page-content login-screen-content iframe"></div>
+				</div>
+			</div>
+		</div>
 		<div id="game" class="login-screen">
 			<div class="view">
 				<div class="navbar">
@@ -168,14 +195,102 @@
 				<div class="navbar">
 					<div class="navbar-bg"></div>
 					<div class="navbar-inner sliding">
-						<div class="left"> </div>
-						<div class="title">5:00</div>
+						<div class="left">
+							<a class="link back">
+								<i class="icon icon-back"></i>
+								<span class="if-not-md"></span>
+							</a>
+						</div>
+						<div class="title translate" data-en="Play and Win" data-bm="Main dan Menang" data-cn="玩游戏赢奖" data-tm="விளையாடு மற்றும் வெற்றி">Play and Win</div>
 						<div class="right"> </div>
 					</div>
 				</div>
 				<div class="page">
 					<div class="page-content login-screen-content">
-						
+						<div class="list media-list inset">
+							<ul>
+								<li>
+									<a class="item-link item-content btn-pnw-tzf">
+										<div class="item-media"><img src="img/2048.gif" width="80"/></div>
+										<div class="item-inner">
+											<div class="item-title-row">
+												<div class="item-title">2048</div>
+											</div>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a class="item-link item-content btn-pnw-fpb">
+										<div class="item-media"><img src="img/flappy.gif" width="80"/></div>
+										<div class="item-inner">
+											<div class="item-title-row">
+												<div class="item-title">Flappy Bird</div>
+											</div>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a class="item-link item-content btn-pnw-pcm">
+										<div class="item-media"><img src="img/pacman.gif" width="80"/></div>
+										<div class="item-inner">
+											<div class="item-title-row">
+												<div class="item-title">Pac Man</div>
+											</div>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a class="item-link item-content btn-pnw-pbb">
+										<div class="item-media"><img src="img/bobble.gif" width="80"/></div>
+										<div class="item-inner">
+											<div class="item-title-row">
+												<div class="item-title">Puzzle Bobble</div>
+											</div>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a class="item-link item-content btn-pnw-sdk">
+										<div class="item-media"><img src="img/sudoku.gif" width="80"/></div>
+										<div class="item-inner">
+											<div class="item-title-row">
+												<div class="item-title">Sudoku</div>
+											</div>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a class="item-link item-content btn-pnw-trr">
+										<div class="item-media"><img src="img/trex.gif" width="80"/></div>
+										<div class="item-inner">
+											<div class="item-title-row">
+												<div class="item-title">T-Rex Runner</div>
+											</div>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a class="item-link item-content btn-pnw-tts">
+										<div class="item-media"><img src="img/tetris.gif" width="80"/></div>
+										<div class="item-inner">
+											<div class="item-title-row">
+												<div class="item-title">Tetris</div>
+											</div>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a class="item-link item-content btn-pnw-tdt">
+										<div class="item-media"><img src="img/twodots.gif" width="80"/></div>
+										<div class="item-inner">
+											<div class="item-title-row">
+												<div class="item-title">Two Dots</div>
+											</div>
+										</div>
+									</a>
+								</li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
